<resources>
    <string name="app_name">Movies2.0</string>
    <string name="service_unavailable_message">Service unavailable. Please try again!</string>
    <string name="no_connection_message">No connection. Please try again!</string>
    <string name="something_went_wrong">Something went wrong. Please try again!</string>
    <string name="please_check_spelling">Please check spelling or try a different word</string>
    <string name="movies">Movies</string>
    <string name="search_movies">Search Movies</string>
    <string name="retry">Retry</string>
    <string name="no_more_data_to_show">Looks like there is no more data to show.</string>
    <string name="rating">Rating</string>
    <string name="runtime">Runtime</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="overview">Overview</string>
</resources>